2005-06-22  Kjartan Maraas  <kmaraas@gnome.org>

	* gtk/gtkhsv.c: (gtk_hsv_expose): Don't leak the cairo context
	Closes bug #308581.

2005-06-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkarrow.c:
	* gtk/gtkimage.c:
	* gtk/gtklabel.c:
	* gtk/gtkpixmap.c: Modify all of the GtkMisc widgets to round down
	on centering calculations to match the behaviour of other parts
	of GTK+. (#307419, Ryan Lortie)

2005-06-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_source_set): Connect to 
	button-release-event as well, to handle touchscreen 
	scenarios better.  (#171490, Markku Vire)

	* gtk/*.h: Trivial cleanups. (#169647, #303455, 
	Fabricio Barros Cabral, Benoit Carpentier)

	* gdk/gdk.symbols: 
	* gdk/gdkwindow.h: 
	* gdk/x11/gdkgeometry-x11.c (gdk_window_move_region): New
	function which can be used to implement scrolling in 
	non-window widgets.  (#135165, Søren Sandmann)

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconcache.c: Handle MAP_FAILED.  (#308449, Georg
	Schwarz)

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version number.

	* === Released 2.7.0 ===

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkwindow.h:
	* gtk/gtkwindow.c (gtk_window_present_with_time): Variant of
	gtk_window_present which takes a timestamp.  (#166379, Elijah Newren)

2005-06-19  Matthias Clasen  <mclasen@redhat.com>
	
	* gtk/gtk.symbols: Add a forgotten symbol

	* NEWS: Updates

2005-06-19  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_clamp_node_visible): added a
	check which avoids processing updates on bin_window and scrolling
	if the node is already visible. (#170600, Billy Biggs).

2005-06-19  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (validate_visible_area): only keep the
	row at the same position if the full row is visible. (#304623,
	Jorn Baayen).

2005-06-19  Kristian Rietveld  <kris@gtk.org>
